--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.0",
     "firebase": "^7.14.5",
-    "google-map-react": "^1.1.7",
     "google-maps-react": "^2.0.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-google-maps": "^9.4.5",
+    "react-geocode": "^0.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
