--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "bootstrap": "^4.5.0",
     "firebase": "^7.14.5",
     "google-maps-react": "^2.0.6",
+    "mapbox-gl": "^1.12.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-geocode": "^0.2.1",
+    "react-mapbox-gl": "^4.8.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
