--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "firebase": "^7.14.5",
     "google-maps-react": "^2.0.6",
     "mapbox-gl": "^1.12.0",
+    "query-string": "^6.13.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-geocode": "^0.2.1",
     "react-mapbox-gl": "^4.8.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
