--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mapbox-gl": "^1.12.0",
     "query-string": "^6.13.2",
     "react": "^16.13.1",
+    "react-alice-carousel": "^2.0.2",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-geocode": "^0.2.1",
