--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.0",
+    "browser-image-compression": "^1.0.13",
     "firebase": "^7.14.5",
     "google-maps-react": "^2.0.6",
+    "gulp-responsive": "^3.0.1",
     "mapbox-gl": "^1.12.0",
     "query-string": "^6.13.2",
     "react": "^16.13.1",
