--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-geocode": "^0.2.1",
     "react-loading-skeleton": "^2.1.1",
     "react-mapbox-gl": "^4.8.6",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "weather-icons": "^1.3.2"
