--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-geocode": "^0.2.1",
+    "react-image-gallery": "^1.0.8",
     "react-loading-skeleton": "^2.1.1",
     "react-mapbox-gl": "^4.8.6",
     "react-rating": "^2.0.5",
