--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^1.0.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.2.4",
     "react-geocode": "^0.2.1",
     "react-image-gallery": "^1.0.8",
     "react-loading-skeleton": "^2.1.1",
