--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.6.1",
+    "@types/react": "^17.0.8",
+    "@types/react-dom": "^17.0.5",
     "bootstrap": "^4.5.0",
     "browser-image-compression": "^1.0.13",
     "firebase": "^8.2.1",
@@ -26,6 +30,7 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "typescript": "^4.3.2",
     "weather-icons": "^1.3.2"
   },
   "scripts": {
@@ -48,5 +53,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/mapbox-gl": "^2.1.2",
+    "@types/react-image-gallery": "^1.0.2",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
