--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@types/mapbox-gl": "^2.1.2",
+    "@types/react-geocode": "^0.2.0",
     "@types/react-image-gallery": "^1.0.2",
     "@types/react-router-dom": "^5.1.7"
   }
