--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "react-three-state-checkbox": "^1.4.1",
     "typescript": "^4.3.2",
     "weather-icons": "^1.3.2"
   },
